--- a/results.tex
+++ b/results.tex
@@ -1,21 +1,23 @@
-\chapter{Ergebnisse}
-\label{results}
+\begin{comment}
+  \chapter{Ergebnisse}
+  \label{results}
 
-Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungen mit dem Ziel simuliert, die Präparation und Durchführung von unterschiedlichen Abscheidungsprozessen mit Parsivald zu untersuchen und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
+  Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungen mit dem Ziel simuliert, die Präparation und Durchführung von unterschiedlichen Abscheidungsprozessen mit Parsivald zu untersuchen und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
 
-Dazu werden verschiedene Systeme auf unterschiedliche Aspekte von Gas\-phasen\-abschei\-dungs-Simu\-la\-tionen mit dem Parsivald-Modell untersucht:
-Abschnitt~\ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen eines Parametersatzes, strukturelle Unterschiede zwischen realen und simulierten per PVD abgeschiedenen Schichten, die Simulation von Schichtabscheidungen auf strukturierten Substraten sowie einen Vergleich der Laufzeitgrößen mit theoretischen Werten.
-Im anschließenden Abschnitt~\ref{copperpvd} werden Voruntersuchungen unterschiedlicher Parametersätze, die Bildung von Unebenheiten an der Oberfläche und deren automatische Schließung in der Parsivald-Simulation anhand von Kupfer-PVD vorgestellt.
-Danach werden Kupfer-Nickel-Multi\-lagen\-systeme in Abschnitt~\ref{multilayer} mit Parsivald simuliert und die Ergebnisse mit denen reiner MD-Simulationen verglichen.
-In Abschnitt~\ref{siliconpvd} werden dann Silizium-PVD-Systeme mit dem Ziel der Abscheidung nichtmetallischer Schichten auf Amorphität und Porösität untersucht.
-Zuletzt kehrt Abschnitt~\ref{aluminaald} kurz zum Thema der Bachelorarbeit zurück und untersucht mit MD-Methoden die Stabilität von TMA und Wasser als Precursoren der \ce{Al2O3}-ALD sowie die Hydroxylierung einer Aluminiumoxid-Oberfläche durch Wassermoleküle.
+  Dazu werden verschiedene Systeme auf unterschiedliche Aspekte von Gas\-phasen\-abschei\-dungs-Simu\-la\-tionen mit dem Parsivald-Modell untersucht:
+  Abschnitt~\ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen eines Parametersatzes, strukturelle Unterschiede zwischen realen und simulierten per PVD abgeschiedenen Schichten, die Simulation von Schichtabscheidungen auf strukturierten Substraten sowie einen Vergleich der Laufzeitgrößen mit theoretischen Werten.
+  Im anschließenden Abschnitt~\ref{copperpvd} werden Voruntersuchungen unterschiedlicher Parametersätze, die Bildung von Unebenheiten an der Oberfläche und deren automatische Schließung in der Parsivald-Simulation anhand von Kupfer-PVD vorgestellt.
+  Danach werden Kupfer-Nickel-Multi\-lagen\-systeme in Abschnitt~\ref{multilayer} mit Parsivald simuliert und die Ergebnisse mit denen reiner MD-Simulationen verglichen.
+  In Abschnitt~\ref{siliconpvd} werden dann Silizium-PVD-Systeme mit dem Ziel der Abscheidung nichtmetallischer Schichten auf Amorphität und Porösität untersucht.
+  Zuletzt kehrt Abschnitt~\ref{aluminaald} kurz zum Thema der Bachelorarbeit zurück und untersucht mit MD-Methoden die Stabilität von TMA und Wasser als Precursoren der \ce{Al2O3}-ALD sowie die Hydroxylierung einer Aluminiumoxid-Oberfläche durch Wassermoleküle.
+\end{comment}
 
 %% \input{goldpvd}
 %% \clearpage
 %% \input{copperpvd}
-\clearpage
-\input{multilayer}
 %% \clearpage
-%% \input{siliconpvd}
+%% \input{multilayer}
+\clearpage
+\input{siliconpvd}
 %% \clearpage
 %% \input{aluminaald}
