--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -73,15 +73,16 @@ Die Referenzwerte stammen aus den Referenzen~\cite{haynes_crc_2011,brillo_densit
 \todo{Legenden (Parametersätze und Temperatur) + linke Grafik neu (Legende überlagert sich). Die Grafiken sind klein.}
 
 \begin{figure}[H]
+  \centering
   \captionsetup[subfigure]{singlelinecheck=false}
-  \def\subfigwidth{7cm}
-  \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{Cu_smf7_meltingpoint}
+  \begin{subfigure}[c]{10cm}
+    \includegraphics[width=\textwidth]{Cu_u6_meltingpoint}
+  \end{subfigure}
+  \begin{subfigure}[c]{4cm}
+    \includegraphics[width=\textwidth]{Cu_u6_meltingpoint_legend}
+    \vspace{1.5em}
   \end{subfigure}
   \hfill
-  \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{missing}
-  \end{subfigure}
   \caption[Vergleich der Schmelztemperatur von Kupfer]{
     Vergleich der Schmelztemperatur von Kupfer.
     Experimentelle Dichte:~\cite{brillo_density_2006}
@@ -90,15 +91,16 @@ Die Referenzwerte stammen aus den Referenzen~\cite{haynes_crc_2011,brillo_densit
 \end{figure}
 
 \begin{figure}[H]
+  \centering
   \captionsetup[subfigure]{singlelinecheck=false}
-  \def\subfigwidth{7cm}
-  \begin{subfigure}[t]{\subfigwidth}
+  \begin{subfigure}[c]{9.4cm}
     \includegraphics[width=\textwidth]{Cu_trelax_all}
   \end{subfigure}
-  \hfill
-  \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{missing}
+  \begin{subfigure}[c]{4.7cm}
+    \includegraphics[width=\textwidth]{Cu_trelax_all_legend}
+    \vspace{1.5em}
   \end{subfigure}
+  \hfill
   \caption[Vergleich der Schmelztemperatur von Kupfer]{
     Vergleich der Schmelztemperatur von Kupfer.
     Experimentelle Dichte:~\cite{brillo_density_2006}
