--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -30,33 +30,31 @@
 
 \begin{document}
 
-\include{titel}
-
-\pagenumbering{roman}
-
-\include{abstract}
-\include{contents}
+%% \include{titel}
+%% \pagenumbering{roman}
+%% \include{abstract}
+%% \include{contents}
 
 \pagenumbering{arabic}
 
-\cleardoublepage
-\include{intro}
-\cleardoublepage
-\include{theory}
-\cleardoublepage
-\include{models}
+%% \cleardoublepage
+%% \include{intro}
+%% \cleardoublepage
+%% \include{theory}
+%% \cleardoublepage
+%% \include{models}
 \cleardoublepage
 \include{results}
-\cleardoublepage
-\include{summary}
+%% \cleardoublepage
+%% \include{summary}
 
-\cleardoublepage
-\include{appendix}
+%% \cleardoublepage
+%% \include{appendix}
 
 \cleardoublepage
 \include{bibliography}
 
-\include{unischeiss}
+%% \include{unischeiss}
 
 \include{test}
 
