--- a/results.tex
+++ b/results.tex
@@ -12,12 +12,12 @@
   Zuletzt kehrt Abschnitt~\ref{aluminaald} kurz zum Thema der Bachelorarbeit zurück und untersucht mit MD-Methoden die Stabilität von TMA und Wasser als Precursoren der \ce{Al2O3}-ALD sowie die Hydroxylierung einer Aluminiumoxid-Oberfläche durch Wassermoleküle.
 \end{comment}
 
-%% \input{goldpvd}
+\input{goldpvd}
 %% \clearpage
 %% \input{copperpvd}
 %% \clearpage
 %% \input{multilayer}
-\clearpage
-\input{siliconpvd}
+%% \clearpage
+%% \input{siliconpvd}
 %% \clearpage
 %% \input{aluminaald}
